--- a/style.css
+++ b/style.css
@@ -5,8 +5,13 @@ h1{
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    float: right
+
+
+    width: 20px;
+    padding: 5px
+  }
+  a {
+    text-decoration: none;
+    color: lightblue;
   }
